{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 176,
  "lineage": "5710e7aa-1136-7ec7-afa2-cacf549b662e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/frontendIPConfigurations/mybluelbpublicip",
                "name": "mybluelbpublicip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/publicIPAddresses/mybluepublicip"
              },
              {
                "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/frontendIPConfigurations/mygreenlbpublicip",
                "name": "mygreenlbpublicip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/publicIPAddresses/mygreenpublicip"
              }
            ],
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb",
            "location": "centralus",
            "name": "mylb",
            "resource_group_name": "myrg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "blue_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/blue-pool",
            "loadbalancer_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "blue-pool"
          },
          "dependencies": [
            "azurerm_lb.public_lb",
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "green_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/green-pool",
            "loadbalancer_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "green-pool"
          },
          "dependencies": [
            "azurerm_lb.public_lb",
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.public_lb",
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/blue-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/frontendIPConfigurations/mybluelbpublicip",
            "frontend_ip_configuration_name": "mybluelbpublicip",
            "frontend_port": 80,
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/loadBalancingRules/http-rule-blue",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "http-rule-blue",
            "probe_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.public_lb",
            "azurerm_lb_backend_address_pool.blue_pool",
            "azurerm_lb_probe.http_probe",
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/green-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/frontendIPConfigurations/mygreenlbpublicip",
            "frontend_ip_configuration_name": "mygreenlbpublicip",
            "frontend_port": 80,
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/loadBalancingRules/http-rule-green",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb",
            "name": "http-rule-green",
            "probe_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.public_lb",
            "azurerm_lb_backend_address_pool.green_pool",
            "azurerm_lb_probe.http_probe",
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "blue_lb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/blue-pool",
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/blue-mynic/ipConfigurations/blue-myip|/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/blue-pool",
            "ip_configuration_name": "blue-myip",
            "network_interface_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/blue-mynic"
          },
          "dependencies": [
            "azurerm_lb.public_lb",
            "azurerm_lb_backend_address_pool.blue_pool",
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet",
            "module.blue_vm.azurerm_network_interface.my_nic",
            "module.blue_vm.azurerm_network_interface_security_group_association.nsg_nic_association",
            "module.blue_vm.azurerm_network_security_group.my_nsg",
            "module.blue_vm.azurerm_network_security_rule.example",
            "module.blue_vm.azurerm_virtual_machine.my_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "green_lb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/green-pool",
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/green-mynic/ipConfigurations/green-myip|/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/loadBalancers/mylb/backendAddressPools/green-pool",
            "ip_configuration_name": "green-myip",
            "network_interface_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/green-mynic"
          },
          "dependencies": [
            "azurerm_lb.public_lb",
            "azurerm_lb_backend_address_pool.green_pool",
            "azurerm_public_ip.blue_public_ip",
            "azurerm_public_ip.green_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet",
            "module.green_vm.azurerm_network_interface.my_nic",
            "module.green_vm.azurerm_network_interface_security_group_association.nsg_nic_association",
            "module.green_vm.azurerm_network_security_group.my_nsg",
            "module.green_vm.azurerm_network_security_rule.example",
            "module.green_vm.azurerm_virtual_machine.my_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "blue_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/publicIPAddresses/mybluepublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.173.255.12",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "mybluepublicip",
            "resource_group_name": "myrg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "green_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/publicIPAddresses/mygreenpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.173.255.7",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "mygreenpublicip",
            "resource_group_name": "myrg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myvnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg",
            "virtual_network_name": "myvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myvnet/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg",
            "virtual_network_name": "myvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myvnet/subnets/subnet3",
            "name": "subnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg",
            "virtual_network_name": "myvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "387e3a62-5bf3-4245-abc3-5909e9f98e9c",
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myvnet",
            "location": "centralus",
            "name": "myvnet",
            "resource_group_name": "myrg"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.blue_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/blue-mynic",
            "internal_domain_name_suffix": "mi3h2ohtlncufk4dlee4t4mote.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "blue-myip",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myvnet/subnets/subnet1"
              }
            ],
            "location": "centralus",
            "name": "blue-mynic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myrg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.blue_vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/blue-mynic|/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/blue-mynsg",
            "network_interface_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/blue-mynic",
            "network_security_group_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/blue-mynsg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet",
            "module.blue_vm.azurerm_network_interface.my_nic",
            "module.blue_vm.azurerm_network_security_group.my_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.blue_vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/blue-mynsg",
            "location": "centralus",
            "name": "blue-mynsg",
            "resource_group_name": "myrg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.blue_vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/blue-mynsg/securityRules/http-rule-nsg",
            "name": "http-rule-nsg",
            "network_security_group_name": "blue-mynsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "myrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet",
            "module.blue_vm.azurerm_network_security_group.my_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.green_vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/green-mynic",
            "internal_domain_name_suffix": "mi3h2ohtlncufk4dlee4t4mote.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "green-myip",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/virtualNetworks/myvnet/subnets/subnet2"
              }
            ],
            "location": "centralus",
            "name": "green-mynic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myrg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.green_vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/green-mynic|/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/green-mynsg",
            "network_interface_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkInterfaces/green-mynic",
            "network_security_group_id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/green-mynsg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet",
            "module.green_vm.azurerm_network_interface.my_nic",
            "module.green_vm.azurerm_network_security_group.my_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.green_vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/green-mynsg",
            "location": "centralus",
            "name": "green-mynsg",
            "resource_group_name": "myrg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.green_vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ff9eefe4-311a-4e21-94b8-b9739e8d7da2/resourceGroups/myrg/providers/Microsoft.Network/networkSecurityGroups/green-mynsg/securityRules/http-rule-nsg",
            "name": "http-rule-nsg",
            "network_security_group_name": "green-mynsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "myrg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet",
            "module.green_vm.azurerm_network_security_group.my_nsg"
          ]
        }
      ]
    }
  ]
}